[gd_scene load_steps=51 format=3 uid="uid://baj56lpkx6b8j"]

[ext_resource type="Script" uid="uid://b6g4ec1xm5n8f" path="res://_MANAGERS/settings_manager.gd" id="1_po116"]
[ext_resource type="Theme" uid="uid://cs7cpy7hookvc" path="res://UI_THEME.tres" id="2_ucd3l"]
[ext_resource type="PackedScene" uid="uid://bt4sgsaxfg8yc" path="res://_MANAGERS/UI/menu_button.tscn" id="3_qed06"]
[ext_resource type="PackedScene" uid="uid://sd4cts34u7t7" path="res://_MANAGERS/UI/slider_manager.tscn" id="4_gaq74"]
[ext_resource type="PackedScene" uid="uid://dg1ir3ywd26j2" path="res://_MANAGERS/UI/custom_toggle.tscn" id="5_gyi0d"]
[ext_resource type="FontFile" uid="uid://hsdppwfineel" path="res://Fonts/SegoeUIBlack.ttf" id="6_iyeh8"]
[ext_resource type="PackedScene" uid="uid://u0rqprt81pas" path="res://_MANAGERS/UI/small_button.tscn" id="7_gg1mu"]
[ext_resource type="AudioStream" uid="uid://dwnsd8h7fk6ql" path="res://Sounds/style_ranks/Splashing2.ogg" id="8_5c0fp"]
[ext_resource type="AudioStream" uid="uid://dlx5xikvttv6w" path="res://Sounds/style_ranks/Aquatic1.ogg" id="9_6xmak"]
[ext_resource type="AudioStream" uid="uid://h3bt3361ccr3" path="res://Sounds/style_ranks/Buoyant2.ogg" id="10_l3s60"]
[ext_resource type="AudioStream" uid="uid://cbjpwnpspesm" path="res://Sounds/style_ranks/Coastal2.ogg" id="11_ckbqw"]
[ext_resource type="AudioStream" uid="uid://b60yp7u0psrm4" path="res://Sounds/style_ranks/Damp1.ogg" id="12_1rat0"]
[ext_resource type="AudioStream" uid="uid://dnphskcuvtm1c" path="res://Sounds/style_ranks/PhishicSSS1.ogg" id="13_lng4y"]
[ext_resource type="AudioStream" uid="uid://cvo4j1k3x2blu" path="res://Sounds/style_ranks/PhishicSS1.ogg" id="14_80ubx"]
[ext_resource type="AudioStream" uid="uid://d1mnm1fx20bk" path="res://Sounds/style_ranks/Phishics3.ogg" id="15_g6v2f"]
[ext_resource type="AudioStream" uid="uid://qgecunu61mnb" path="res://Sounds/tricks/rare/divestart.ogg" id="16_55qju"]
[ext_resource type="AudioStream" uid="uid://dmv3h5optlt8h" path="res://Sounds/tricks/rare/FL_hit_1.ogg" id="17_0wp1d"]
[ext_resource type="AudioStream" uid="uid://c6wye6lhd2i0h" path="res://Sounds/tricks/legendary/oh_the_misery.ogg" id="18_b2f3v"]
[ext_resource type="AudioStream" uid="uid://dc73ttft37818" path="res://Sounds/tricks/trick1.ogg" id="19_85wa2"]
[ext_resource type="AudioStream" uid="uid://dj271uuc65mds" path="res://Sounds/tricks/trick2.ogg" id="20_5smxr"]
[ext_resource type="AudioStream" uid="uid://cu4adehe2o5ag" path="res://Sounds/tricks/trick3.ogg" id="21_l3xse"]
[ext_resource type="AudioStream" uid="uid://bitbhb4x5mkdo" path="res://Sounds/tricks/rare/FL_hit_2.ogg" id="22_0jxcd"]
[ext_resource type="AudioStream" uid="uid://ccc5os2uty2jw" path="res://Sounds/tricks/rare/FL_hit_3.ogg" id="23_6v7e7"]
[ext_resource type="AudioStream" uid="uid://b7dnvusks7vwv" path="res://Sounds/tricks/rare/FL_hit_4.ogg" id="24_wmb06"]
[ext_resource type="AudioStream" uid="uid://cyltwf5dvuj5d" path="res://Sounds/tricks/rare/gambling.ogg" id="25_4pv66"]
[ext_resource type="AudioStream" uid="uid://cl3mngag8w3pm" path="res://Sounds/tricks/rare/scratch2.ogg" id="26_5i4eb"]
[ext_resource type="AudioStream" uid="uid://b7a85qb5hsgf2" path="res://Sounds/tricks/rare/scratch1.ogg" id="27_k6a1m"]
[ext_resource type="AudioStream" uid="uid://cwbyge4sbo6ch" path="res://Sounds/tricks/rare/tony_hawk_trick_low.ogg" id="28_0orqw"]
[ext_resource type="AudioStream" uid="uid://dav807pihtf7q" path="res://Sounds/tricks/legendary/tony_hawk_trick_high.ogg" id="29_7qc7w"]
[ext_resource type="AudioStream" uid="uid://bjpjbd4agn1eq" path="res://Sounds/impact_bloody/bloody1.ogg" id="30_ia1tq"]
[ext_resource type="AudioStream" uid="uid://b2uje1y503456" path="res://Sounds/impact_bloody/bloody2.ogg" id="31_hjd4c"]
[ext_resource type="AudioStream" uid="uid://vx80lpkiv53p" path="res://Sounds/mine_activated.ogg" id="32_jaonn"]
[ext_resource type="AudioStream" uid="uid://bykjymt7hrou2" path="res://Sounds/zipline/zipline_start.ogg" id="33_qsrl8"]
[ext_resource type="AudioStream" uid="uid://fnadeg5y52e6" path="res://Sounds/bowling/STRIKE.ogg" id="34_5y5g6"]
[ext_resource type="AudioStream" uid="uid://bnaji0clr1j6c" path="res://Sounds/impact_bloody/bloody3.ogg" id="35_x2ek5"]
[ext_resource type="AudioStream" uid="uid://ced3chei8hbe3" path="res://Sounds/boost_ring.ogg" id="36_ygjtw"]
[ext_resource type="AudioStream" uid="uid://c6au0422c773r" path="res://Sounds/FISH.ogg" id="37_qq3dd"]
[ext_resource type="AudioStream" uid="uid://bm8tigdhl3rf2" path="res://Sounds/crabbump.ogg" id="38_ow0v1"]
[ext_resource type="AudioStream" uid="uid://dk0bu6foohfoh" path="res://Sounds/reticle.ogg" id="39_5iy0y"]
[ext_resource type="AudioStream" uid="uid://bu7um2p6lj37" path="res://Sounds/sign_hit.ogg" id="40_vy128"]
[ext_resource type="AudioStream" uid="uid://4eoy8kdh6rxc" path="res://Sounds/shotgun.ogg" id="41_oslhh"]
[ext_resource type="AudioStream" uid="uid://eu7r75ryhiel" path="res://Sounds/worm_collect.ogg" id="42_2xpgx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4v4un"]
bg_color = Color(0, 0.637, 0.98, 0.823529)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0, 0.966667, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 25.0
expand_margin_top = 1.0
expand_margin_right = 25.0
expand_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_306fx"]
resource_local_to_scene = true
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 0.25, 0.7875, 1)
border_color = Color(0, 0.966667, 1, 1)
corner_radius_top_left = 60
corner_radius_top_right = 15
corner_radius_bottom_right = 45
corner_radius_bottom_left = 15
shadow_color = Color(0.02, 0.02, 0.02, 0.6)
shadow_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_0b1ms"]
font = ExtResource("6_iyeh8")
font_size = 37
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_luks7"]
font = ExtResource("6_iyeh8")
font_size = 37
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jp6p0"]
resource_local_to_scene = true
content_margin_top = 6.0
content_margin_bottom = 8.0
bg_color = Color(1, 0.25, 0.7875, 1)
corner_radius_top_left = 40
corner_radius_top_right = 15
corner_radius_bottom_right = 40
corner_radius_bottom_left = 15

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_o0ttw"]
streams_count = 8
stream_0/stream = ExtResource("8_5c0fp")
stream_1/stream = ExtResource("9_6xmak")
stream_2/stream = ExtResource("10_l3s60")
stream_3/stream = ExtResource("11_ckbqw")
stream_4/stream = ExtResource("12_1rat0")
stream_5/stream = ExtResource("13_lng4y")
stream_6/stream = ExtResource("14_80ubx")
stream_7/stream = ExtResource("15_g6v2f")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qs1qg"]
streams_count = 14
stream_0/stream = ExtResource("16_55qju")
stream_1/stream = ExtResource("17_0wp1d")
stream_2/stream = ExtResource("22_0jxcd")
stream_3/stream = ExtResource("23_6v7e7")
stream_4/stream = ExtResource("24_wmb06")
stream_5/stream = ExtResource("25_4pv66")
stream_6/stream = ExtResource("26_5i4eb")
stream_7/stream = ExtResource("27_k6a1m")
stream_8/stream = ExtResource("28_0orqw")
stream_9/stream = ExtResource("29_7qc7w")
stream_10/stream = ExtResource("18_b2f3v")
stream_11/stream = ExtResource("19_85wa2")
stream_12/stream = ExtResource("20_5smxr")
stream_13/stream = ExtResource("21_l3xse")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_swgw1"]
streams_count = 13
stream_0/stream = ExtResource("30_ia1tq")
stream_1/stream = ExtResource("31_hjd4c")
stream_2/stream = ExtResource("35_x2ek5")
stream_3/stream = ExtResource("36_ygjtw")
stream_4/stream = ExtResource("37_qq3dd")
stream_5/stream = ExtResource("38_ow0v1")
stream_6/stream = ExtResource("39_5iy0y")
stream_7/stream = ExtResource("40_vy128")
stream_8/stream = ExtResource("41_oslhh")
stream_9/stream = ExtResource("42_2xpgx")
stream_10/stream = ExtResource("32_jaonn")
stream_11/stream = ExtResource("33_qsrl8")
stream_12/stream = ExtResource("34_5y5g6")

[node name="settings_manager" type="Node"]
process_mode = 3
script = ExtResource("1_po116")

[node name="Settings" type="MarginContainer" parent="."]
unique_name_in_owner = true
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 190
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 190
theme_override_constants/margin_bottom = 35

[node name="settingsTabs" type="TabContainer" parent="Settings"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_ucd3l")
tab_alignment = 1
current_tab = 0

[node name="Graphics" type="Panel" parent="Settings/settingsTabs"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4v4un")
metadata/_tab_index = 0

[node name="settingsGoBack" parent="Settings/settingsTabs/Graphics" instance=ExtResource("3_qed06")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 580.0
offset_top = 825.0
offset_right = 924.0
offset_bottom = 923.0
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_306fx")
theme_override_styles/focus = SubResource("StyleBoxFlat_306fx")
text = "      Back      "

[node name="MarginContainer" type="MarginContainer" parent="Settings/settingsTabs/Graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 100

[node name="GridContainer" type="VBoxContainer" parent="Settings/settingsTabs/Graphics/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 16

[node name="UIscale" parent="Settings/settingsTabs/Graphics/MarginContainer/GridContainer" instance=ExtResource("4_gaq74")]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.7
max_value = 1.9
sliderName = "UI scale"
helpText = "Adjust the size of the user interface."

[node name="3DresScale" parent="Settings/settingsTabs/Graphics/MarginContainer/GridContainer" instance=ExtResource("4_gaq74")]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.2
sliderName = "3D resolution scale"
helpText = "Lower the game's resolution without affecting the quality of 2D elements.
(May help with performance on low end computers.)"

[node name="alwaysOnTop" parent="Settings/settingsTabs/Graphics/MarginContainer/GridContainer" instance=ExtResource("5_gyi0d")]
layout_mode = 2
toggle_name = "Always on top"
helpText = "Render the game window above anything else."

[node name="fullsceen" parent="Settings/settingsTabs/Graphics/MarginContainer/GridContainer" instance=ExtResource("5_gyi0d")]
layout_mode = 2
toggle_name = "Fullscreen (F11)"
helpText = "(not working yet)"

[node name="Audio" type="Panel" parent="Settings/settingsTabs"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4v4un")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="Settings/settingsTabs/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 60
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/settingsTabs/Audio/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="Settings/settingsTabs/Audio/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Master  "
label_settings = SubResource("LabelSettings_0b1ms")
horizontal_alignment = 2

[node name="masterSlider" type="HSlider" parent="Settings/settingsTabs/Audio/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_ucd3l")
max_value = 2.0
step = 0.05
value = 1.0

[node name="masterVol" type="Label" parent="Settings/settingsTabs/Audio/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = " 100%"
label_settings = SubResource("LabelSettings_luks7")
clip_text = true

[node name="MarginContainer2" type="MarginContainer" parent="Settings/settingsTabs/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 150
metadata/_edit_lock_ = true

[node name="volumeSliders" type="VBoxContainer" parent="Settings/settingsTabs/Audio/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25

[node name="musicVol" parent="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders" instance=ExtResource("4_gaq74")]
unique_name_in_owner = true
layout_mode = 2
sliderName = "Music"
helpText = "Set the volume of the background music."

[node name="voiceVol" parent="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders" instance=ExtResource("4_gaq74")]
unique_name_in_owner = true
layout_mode = 2
sliderName = "Voice"
helpText = "Set the volume of the voice announcing rank changes."

[node name="trickVol" parent="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders" instance=ExtResource("4_gaq74")]
unique_name_in_owner = true
layout_mode = 2
max_value = 5.0
step = 0.25
value = 3.5
sliderName = "Tricks"
helpText = "Set the volume of the sound effects playing when performing tricks."

[node name="sfxVol" parent="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders" instance=ExtResource("4_gaq74")]
unique_name_in_owner = true
layout_mode = 2
sliderName = "SFX"
helpText = "Set the volume of non-trick related sound effects."

[node name="Button" parent="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders" instance=ExtResource("7_gg1mu")]
custom_minimum_size = Vector2(350, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_jp6p0")
theme_override_styles/focus = SubResource("StyleBoxFlat_jp6p0")
text = "Reset volume to default"
helpText = "still doesnt work yet"

[node name="focusMute" parent="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders" instance=ExtResource("5_gyi0d")]
layout_mode = 2
toggle_name = "Mute when unfocused"
helpText = "Mutes the game when clicking on another window."

[node name="voicePreview" type="AudioStreamPlayer" parent="Settings/settingsTabs/Audio"]
stream = SubResource("AudioStreamRandomizer_o0ttw")
volume_db = 6.0
bus = &"rankUp"

[node name="trickPreview" type="AudioStreamPlayer" parent="Settings/settingsTabs/Audio"]
stream = SubResource("AudioStreamRandomizer_qs1qg")
bus = &"tricks"

[node name="sfxPreview" type="AudioStreamPlayer" parent="Settings/settingsTabs/Audio"]
stream = SubResource("AudioStreamRandomizer_swgw1")
max_polyphony = 3
bus = &"fishsfx"

[node name="Controls" type="Panel" parent="Settings/settingsTabs"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4v4un")
metadata/_tab_index = 2

[node name="Label" type="Label" parent="Settings/settingsTabs/Controls"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "TOdo:
left handed mode
comfort mode
Jump meter"

[node name="Save data" type="Panel" parent="Settings/settingsTabs"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4v4un")
metadata/_tab_index = 3

[connection signal="on_button_pressed" from="Settings/settingsTabs/Graphics/settingsGoBack" to="." method="_on_settings_go_back"]
[connection signal="value_changed" from="Settings/settingsTabs/Graphics/MarginContainer/GridContainer/UIscale" to="." method="_on_UIscale_value_changed"]
[connection signal="value_changed" from="Settings/settingsTabs/Graphics/MarginContainer/GridContainer/3DresScale" to="." method="_on_3d_res_scale_value_changed"]
[connection signal="pressed" from="Settings/settingsTabs/Graphics/MarginContainer/GridContainer/alwaysOnTop" to="." method="_on_always_top_toggled"]
[connection signal="focus_entered" from="Settings/settingsTabs/Audio/MarginContainer/HBoxContainer/masterSlider" to="." method="_master_volume_help_tip"]
[connection signal="mouse_entered" from="Settings/settingsTabs/Audio/MarginContainer/HBoxContainer/masterSlider" to="." method="_master_volume_help_tip"]
[connection signal="value_changed" from="Settings/settingsTabs/Audio/MarginContainer/HBoxContainer/masterSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders/musicVol" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders/voiceVol" to="." method="_on_voice_volume_changed"]
[connection signal="value_changed" from="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders/trickVol" to="." method="_on_tricks_volume_changed"]
[connection signal="value_changed" from="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders/sfxVol" to="." method="_on_sfx_volume_changed"]
[connection signal="pressed" from="Settings/settingsTabs/Audio/MarginContainer2/volumeSliders/focusMute" to="." method="_on_focus_mute_pressed"]
